welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value Diag
		while (j <= 7 - Math.abs(Diag-7))
                                         ^